--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -1,6 +1,7 @@
 <html>
 <head>
     <base href="{{ base_url() }}/">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
     <script src="js/app.js"></script>
     <script>
@@ -11,7 +12,8 @@
 {% verbatim %}
 <body ng-app="sprintBoard">
 <div ng-controller="boardController">
-    <div ng-repeat="card in cards"><h1>{{ card.name }}</h1></div>
+    <div class="header">{{board.name}}</div>
+    <div ng-repeat="card in board.cards"><h1>{{ card.name }}</h1></div>
 </div>
 </body>
 </html>
