--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -2,7 +2,8 @@
 <head>
     <base href="{{ base_url() }}/">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="js/app.js"></script>
     <script>
         var API_ROOT = '{{ base_url() }}/api/';
@@ -12,8 +13,16 @@
 {% verbatim %}
 <body ng-app="sprintBoard">
 <div ng-controller="boardController">
-    <div class="header">{{board.name}}</div>
-    <div ng-repeat="card in board.cards"><h1>{{ card.name }}</h1></div>
+    <div class="header">
+        <div class="header-board-name">{{board.name}}</div>
+        <div class="header-card-add" ng-click="addCard()">
+            <div class="header-card-add-icon"></div>
+            <div class="header-card-add-text">Add new card</div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="card" ng-repeat="card in board.cards"><h1>{{ card.name }}</h1></div>
+    </div>
 </div>
 </body>
 </html>
