--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -7,7 +7,7 @@
     <script src="js/app.js"></script>
     <script>
         var API_ROOT = '{{ base_url() }}/api/';
-        var BOARD_HASH = 'zyhpnbzc';
+        var BOARD_HASH = '{{ board.hash }}';
     </script>
 </head>
 {% verbatim %}
