--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,8 @@
 
 $color-red: #ee2d29;
 $color-background: #ecf0f1;
-$color-card-border: rgba(0, 0, 0, 0.15);
+$color-card-border: rgba(0, 0, 0, 0.1);
+$color-gray: #a6a6a6;
 
 // Bootstrap overrides
 $font-size-base: 16px;
@@ -35,6 +36,7 @@ $body-bg: $color-background;
 
 .header-card-add {
   float: right;
+  cursor: pointer;
 }
 
 .header-card-add-icon {
@@ -55,7 +57,7 @@ $body-bg: $color-background;
 
 .card {
   background-color: white;
-  width: 400px;
+  width: 320px;
   display: inline-block;
   vertical-align: top;
   margin: 8px;
@@ -84,4 +86,34 @@ $body-bg: $color-background;
   background-image: url("../images/icon-checkmark.svg");
   @include icon;
   float: left;
+}
+
+.card-task-add {
+  width: 48px;
+  height: 48px;
+  background-image: url("../images/icon-add-gray.svg");
+  @include icon;
+  float: left;
+}
+
+.card-task-ellipsis-wrapper {
+  width: 48px;
+  height: 48px;
+  float: right;
+  cursor: pointer;
+}
+
+.card-task-ellipsis {
+  width: 48px;
+  height: 48px;
+  background-image: url("../images/icon-ellipsis.svg");
+  @include icon;
+}
+
+.card-task-name-add-new {
+  color: $color-gray;
+}
+
+.card-task-add-new {
+  cursor: pointer;
 }
