--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -5,6 +5,7 @@
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script>
         var API_ROOT = '{{ base_url() }}/api/';
         var BOARD_HASH = '{{ board.hash }}';
@@ -24,8 +25,22 @@
         <div class="card" ng-repeat="card in board.cards">
         <div class="card-title">{{ card.name }}</div>
         <div class="card-tasks-container" ng-repeat="task in card.tasks">
-            <div class="card-task"><div class="card-task-checkmark"></div><div class="card-task-name">{{ task.name }}</div></div>
+            <div class="card-task">
+                <div class="card-task-checkmark"></div>
+                <div class="card-task-ellipsis-wrapper" uib-dropdown on-toggle="toggled(open)">
+                <div class="card-task-ellipsis" uib-dropdown-toggle></div>
+                <ul class="uib-dropdown-menu" aria-labelledby="simple-dropdown">
+                <li>
+                  <a href="">Rename item</a>
+                  <a href="">Delete item</a>
+                </li>
+                </ul>
+                </div>
+            <div class="card-task-name">{{ task.name }}</div></div>
         </div>
+        <div class="card-task card-task-add-new">
+            <div class="card-task-add"></div>
+            <div class="card-task-name card-task-name-add-new">Add new task</div>
         </div>
     </div>
 </div>
