--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -1,6 +1,8 @@
 <html>
 <head>
+    {% include 'favicons.twig' %}
     <base href="{{ base_url() }}/">
+    <title>{{ board.name }} - Sprintboard</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
