Add base URL to manifest.json and browserconfig.xml

--- a/templates/favicons.twig
+++ b/templates/favicons.twig
@@ -11,8 +11,8 @@
 <link rel="icon" type="image/png" href="{{ base_url() }}/images/favicons/android-chrome-192x192.png" sizes="192x192">
 <link rel="icon" type="image/png" href="{{ base_url() }}/images/favicons/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/png" href="{{ base_url() }}/images/favicons/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="{{ base_url() }}/images/favicons/manifest.json">
+<link rel="manifest" href="{{ base_url() }}/manifest.json">
 <link rel="shortcut icon" href="{{ base_url() }}/images/favicons/favicon.ico">
 <meta name="msapplication-TileColor" content="#ee2d29">
 <meta name="msapplication-TileImage" content="{{ base_url() }}/images/favicons/mstile-144x144.png">
-<meta name="msapplication-config" content="{{ base_url() }}/images/favicons/browserconfig.xml">
+<meta name="msapplication-config" content="{{ base_url() }}/browserconfig.xml">
