--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="content">
-        <div class="card" ng-repeat="card in board.cards">
+        <div class="card" ng-repeat="card in board.cards" ng-controller="cardController">
         <div class="card-title">{{ card.name }}</div>
         <div class="card-tasks-container" ng-repeat="task in card.tasks">
             <div class="card-task">
@@ -42,7 +42,7 @@
         </div>
         <div class="card-task card-task-add-new">
             <div class="card-task-add"></div>
-            <div class="card-task-name card-task-name-add-new">Add new task</div>
+            <div class="card-task-name card-task-name-add-new" ng-click="addTask()">Add new task</div>
         </div>
     </div>
 </div>
