Functionality to mark a task to be done and also unmark it

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -94,6 +94,11 @@ $body-bg: $color-background;
   @include icon;
   @include no-select;
   float: left;
+  cursor: pointer;
+}
+
+.card-task-checkmark-is-done {
+  background-image: url("../images/icon-checkmark-is-done.svg");
 }
 
 .card-task-add {
