--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -2,6 +2,7 @@
 <head>
     <base href="{{ base_url() }}/">
     <title>{{ board.name }} - Sprintboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
