Delete task functionality

--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -35,7 +35,7 @@
                 <ul class="uib-dropdown-menu" aria-labelledby="simple-dropdown">
                 <li>
                   <a href="">Rename item</a>
-                  <a href="">Delete item</a>
+                  <a href="" ng-click="deleteTask()">Delete item</a>
                 </li>
                 </ul>
                 </div>
