--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -34,7 +34,7 @@
                 <div class="card-task-ellipsis" uib-dropdown-toggle></div>
                 <ul class="uib-dropdown-menu pull-right" aria-labelledby="simple-dropdown">
                 <li>
-                  <a href="">Rename item</a>
+                  <a href="" ng-click="renameTask()">Rename item</a>
                   <a href="" ng-click="deleteTask()">Delete item</a>
                 </li>
                 </ul>
