--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -32,10 +32,10 @@
                 <div class="card-task-checkmark" ng-class="{'card-task-checkmark-is-done': task.is_done}" ng-click="markAsDone()"></div>
                 <div class="card-task-ellipsis-wrapper" uib-dropdown on-toggle="toggled(open)">
                 <div class="card-task-ellipsis" uib-dropdown-toggle></div>
-                <ul class="uib-dropdown-menu pull-right" aria-labelledby="simple-dropdown">
+                <ul class="uib-dropdown-menu pull-right">
                 <li>
-                  <a href="" ng-click="renameTask()">Rename item</a>
-                  <a href="" ng-click="deleteTask()">Delete item</a>
+                  <a href="" ng-click="renameTask()">Rename task</a>
+                  <a href="" ng-click="deleteTask()">Delete task</a>
                 </li>
                 </ul>
                 </div>
