--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="node_modules/underscore/underscore.js"></script>
     <script src="js/app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+    <script src="js/vendor/sortable.js"></script>
+    <script src="js/vendor/ng-sortable.js"></script>
     <script>
         var API_ROOT = '{{ base_url() }}/api/';
         var BOARD_HASH = '{{ board.hash }}';
@@ -27,8 +29,8 @@
     <div class="content">
         <div class="card" ng-repeat="card in board.cards" ng-controller="cardController">
         <div class="card-title">{{ card.name }}</div>
-        <div class="card-tasks-container" ng-repeat="task in card.tasks | orderBy:'is_done'" ng-controller="taskController">
-            <div class="card-task" ng-class="{'card-task-is-done': task.is_done}">
+        <div class="card-tasks-container" ng-sortable="sortConfig">
+            <div class="card-task clearfix" ng-class="{'card-task-is-done': task.is_done}" ng-repeat="task in card.tasks" ng-controller="taskController">
                 <div class="card-task-checkmark" ng-click="markAsDone()"></div>
                 <div class="card-task-ellipsis-wrapper" uib-dropdown on-toggle="toggled(open)">
                 <div class="card-task-ellipsis" uib-dropdown-toggle></div>
