--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -29,6 +29,17 @@
     <div class="content">
         <div class="card" ng-repeat="card in board.cards" ng-controller="cardController">
         <div class="card-title">{{ card.name }}</div>
+
+        <div class="card-ellipsis-wrapper" uib-dropdown on-toggle="toggled(open)">
+            <div class="card-ellipsis" uib-dropdown-toggle></div>
+            <ul class="uib-dropdown-menu pull-right">
+                <li>
+                  <a href="" ng-click="renameCard()">Rename card</a>
+                  <a href="" ng-click="deleteCard()">Delete card</a>
+                </li>
+            </ul>
+        </div>
+
         <div class="card-tasks-container" ng-sortable="sortConfig">
             <div class="card-task clearfix" ng-class="{'card-task-is-done': task.is_done}" ng-repeat="task in card.tasks" ng-controller="taskController">
                 <div class="card-task-checkmark" ng-click="markAsDone()"></div>
