--- a/js/templates/modal-delete-card.html
+++ b/js/templates/modal-delete-card.html
@@ -9,5 +9,5 @@
 </div>
 <div class="modal-footer">
     <a class="btn btn-default" ng-click="cancel()">Cancel</a>
-    <a class="btn btn-danger" ng-click="deleteCard()">Delete card</a>
+    <a class="btn btn-primary" ng-click="deleteCard()">Delete card</a>
 </div>
