--- a/templates/boardAdd.twig
+++ b/templates/boardAdd.twig
@@ -1,13 +1,16 @@
 {% extends 'html.twig' %}
 {% block body %}
+    <div class="header">Sprintboard</div>
     <div class="container">
-        <h1>Add board</h1>
-        <form method="post">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input class="form-control" type="text" name="name" id="name">
-            </div>
-            <button class="btn btn-primary" type="submit">Add board</button>
-        </form>
+        <div class="add-board-card clearfix">
+            <h1>Add board</h1>
+            <form method="post">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input class="form-control" type="text" name="name" id="name">
+                </div>
+                <button class="btn btn-primary" type="submit">Add board</button>
+            </form>
+        </div>
     </div>
 {% endblock %}
