--- a/templates/html.twig
+++ b/templates/html.twig
@@ -1,16 +1,27 @@
+{% if board.name %}
+{% set title = board.name ~ ' - Sprintboard' %}
+{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <base href="{{ base_url() }}/">
+    <title>{{ title | default('Sprintboard') }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sprintboard</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="node_modules/underscore/underscore.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/vendor/sortable.js"></script>
+    <script src="js/vendor/ng-sortable.js"></script>
+    <script>
+        var API_ROOT = '{{ base_url() }}/api/';
+        var BOARD_HASH = '{{ board.hash }}';
+    </script>
+    {% include 'favicons.twig' %}
 </head>
 <body>
 {% block body %}
 {% endblock %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
