--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -18,7 +18,7 @@
             <div class="card-ellipsis" uib-dropdown-toggle></div>
             <ul class="uib-dropdown-menu pull-right">
                 <li>
-                  <!-- <a href="" ng-click="renameCard()">Rename card</a> -->
+                  <a href="" ng-click="renameCard()">Rename card</a>
                   <a href="" ng-click="deleteCard()">Delete card</a>
                 </li>
             </ul>
