--- a/templates/html.twig
+++ b/templates/html.twig
@@ -11,6 +11,8 @@
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="node_modules/underscore/underscore.js"></script>
+    <script src="node_modules/moment/moment.js"></script>
+    <script src="node_modules/moment/locale/fi.js"></script>
     <script src="js/app.js"></script>
     <script src="js/vendor/sortable.js"></script>
     <script src="js/vendor/ng-sortable.js"></script>
