Expand "add task" hit area also to the icon

--- a/templates/boardView.twig
+++ b/templates/boardView.twig
@@ -53,9 +53,9 @@
                 </div>
             <div class="card-task-name">{{ task.name }}</div></div>
         </div>
-        <div class="card-task card-task-add-new">
+        <div class="card-task card-task-add-new" ng-click="addTask()">
             <div class="card-task-add"></div>
-            <div class="card-task-name card-task-name-add-new" ng-click="addTask()">Add new task</div>
+            <div class="card-task-name card-task-name-add-new">Add new task</div>
         </div>
     </div>
 </div>
