--- a/templates/html.twig
+++ b/templates/html.twig
@@ -13,9 +13,20 @@
     <script src="node_modules/underscore/underscore.js"></script>
     <script src="node_modules/moment/moment.js"></script>
     <script src="node_modules/moment/locale/fi.js"></script>
-    <script src="js/app.js"></script>
     <script src="js/vendor/sortable.js"></script>
     <script src="js/vendor/ng-sortable.js"></script>
+    <script src="js/app.js"></script>
+    <!-- inject:js -->
+    <script src="js/controllers/board-controller.js"></script>
+    <script src="js/controllers/card-controller.js"></script>
+    <script src="js/controllers/modal-add-card-controller.js"></script>
+    <script src="js/controllers/modal-add-sprint-controller.js"></script>
+    <script src="js/controllers/modal-delete-card-controller.js"></script>
+    <script src="js/controllers/modal-rename-card-controller.js"></script>
+    <script src="js/controllers/modal-rename-task-controller.js"></script>
+    <script src="js/controllers/model-add-task-controller.js"></script>
+    <script src="js/controllers/task-controller.js"></script>
+    <!-- endinject -->
     <script>
         var API_ROOT = '{{ base_url() }}/api/';
         var TEAM_HASH = '{{ team.hash }}';
